Upgraded to latest RSyntax version 3.1.3.  / Refactorings